--- a/01-INTRO-REACT/index.html
+++ b/01-INTRO-REACT/index.html
@@ -14,7 +14,7 @@
     <div id="root"></div>
 
     <script type="text/babel">
-        const nombre = 'Rononoa Zoro!!!';
+        const nombre = 'George Mota!!!';
         const divRoot = document.querySelector('#root');
         const h1Tag = <h1>Hi, i'm {nombre}</h1>
         ReactDOM.render( h1Tag, divRoot );
