--- a/01-intro-react/index.html
+++ b/01-intro-react/index.html
@@ -16,7 +16,7 @@
     <script type="text/babel">
         const nombre = 'George Mota!!!';
         const divRoot = document.querySelector('#root');
-        const h1Tag = <h1>Hi, i'm {nombre}</h1>
+        const h1Tag = <h1>Buenos días, mi nombre es {nombre}</h1>
         ReactDOM.render( h1Tag, divRoot );
     </script>
     
