--- a/01-intro-react/index.html
+++ b/01-intro-react/index.html
@@ -14,7 +14,7 @@
     <div id="root"></div>
 
     <script type="text/babel">
-        const nombre = 'George Mota!';
+        const nombre = 'George Mota!!';
         const divRoot = document.querySelector('#root');
         const h1Tag = <h1>Buenos días, mi nombre es {nombre}</h1>
         ReactDOM.render( h1Tag, divRoot );
